RESOLVED FIXED267343
[WGSL] shader,execution,expression,call,builtin,round:* is failing
https://bugs.webkit.org/show_bug.cgi?id=267343
Summary [WGSL] shader,execution,expression,call,builtin,round:* is failing
Tadeu Zagallo
Reported 2024-01-10 07:42:02 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-10 07:42:13 PST
Tadeu Zagallo
Comment 2 2024-01-10 07:45:35 PST
EWS
Comment 3 2024-01-11 00:50:57 PST
Committed 272902@main (fc2ee18b7d41): <https://commits.webkit.org/272902@main> Reviewed commits have been landed. Closing PR #22593 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.