[WGSL] shader,execution,expression,call,builtin,round:* is failing https://bugs.webkit.org/show_bug.cgi?id=267343 rdar://120784372

Reviewed by Mike Wyrzykowski.

Both the constant and runtime version of round were incorrect. The constant version
failed for negative with a .5 fractional part and the runtime version was using
Metal's `round`, which doesn't not match WGSL's behavior. Instead we use rint for
both.

* Source/WebGPU/WGSL/ConstantFunctions.h:
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):

Canonical link: https://commits.webkit.org/272902@main